<resources>
    <string name="app_name">Markneur</string>

    <!--Login -->
    <string name="tvUser">Usuario:</string>
    <string name="tvMarkneur">MARKNEUR</string>
    <string name="tvPass">Contraseña:</string>
    <string name="itemHome">Principal</string>
    <string name="itemConsulta">Consultas</string>
    <string name="itemPerfil">Peril</string>
    <string name="itemCerrar">Salir</string>
    <!--Main-->
    <string name="tvUserMain"></string>
    <!--PRincipal-->
    <string name="tvBitacoras">Bitácora del Día</string>
    <string name="tvFecha"></string>
    <string name="tvHora"></string>
    <string name="btnVisitante">Visitante</string>
    <string name="btnMensajeria">Mensajería</string>
    <string name="btnVehiculo">Vehículo</string>
    <string name="btnSalida">Salida</string>
    <!--VIsita-->
    <string name="lvVista">Eventos de Día</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="carrito">Carrito</string>
    <string name="ordenes">Ordenes</string>
    <string name="Perfil">Perfil</string>
    <string name="address_edt">Dirección</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="product_name">Product Name</string>
    <string name="comprar">Comprar</string>
    <string name="orden">Orden</string>
    <string name="direcci_n">Dirección</string>
    <string name="total">Total</string>
    <string name="_0_00">$0.00</string>
</resources>