<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:tooltipText="Home"
        android:contentDescription="@string/home"
        android:title="@string/home" />
    <item
        android:id="@+id/carritoFragment"
        android:icon="@drawable/cart"
        android:tooltipText="@string/carrito"
        android:title="@string/carrito" />

    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/order_approve"
        android:tooltipText="@string/ordenes"
        android:title="@string/ordenes" />

    <item
        android:id="@+id/perfilFragment"
        android:icon="@drawable/account"
        android:tooltipText="@string/Perfil"
        android:title="@string/Perfil" />
</menu>