<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/white_ghost_markneur"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:src="@drawable/markneur" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvMarkneur"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/orange_markneur_100"
            android:fontFamily="@font/ralewaythin"
            android:layout_marginBottom="50dp"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvUser"
            android:textColor="@color/orange_markneur_100"
            android:fontFamily="@font/ralewayregular"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:outlineAmbientShadowColor="@color/orange_markneur_300" />

        <EditText
            android:id="@+id/etUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPass"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/orange_markneur_100"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="@font/ralewaybold"
                android:backgroundTint="@color/orange_markneur_200"
                android:shadowColor="@color/white"
                android:text="entrar"
                android:textColor="@color/white" />
        </GridLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/orange_markneur_200"
                android:fontFamily="@font/ralewaybold"
                android:shadowColor="@color/white"
                android:text="Registrarse"
                android:textColor="@color/white" />
        </GridLayout>
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:visibility="gone">

        <include
            layout="@layout/shimmer_layout"
            tools:visibility="gone" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</RelativeLayout>